schnellste Sortierung fertig implementiert!